# Conway

./: .gitignore  CMakeLists.txt
Code/: CMakeLists.txt
Code/App/: CMakeLists.txt  runConway.cpp~
Code/Apps/: CMakeLists.txt  runConway.cpp  runConway.cpp~
Code/Lib/: CMakeLists.txt  basicTypes.cpp  basicTypes.cpp~  basicTypes.hpp  basicTypes.hpp~  conway.cpp  conway.cpp~  conway.hpp  conway.hpp~
Testing/: CMakeLists.txt  Conway_CatchMain.cpp  Conway_CatchMain.hpp  Test_Conway.cpp  Test_Conway.cpp~  gridRT_CatchMain.cpp~
misc/: generateDomain.m  generateVideo.m  generateVideo.m~  performanceMeasurements.bash  performanceMeasurements.bash~
